--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,7 +7,7 @@ description: A description of your project
 # Set to false to disable KaTeX math
 use_math: true
 # Add Google analytics id if you have one and want to use it here
-google_analytics:
+google_analytics: UA-106559980-1
 # See http://nbdev.fast.ai/search for help with adding Search
 google_search:
 
